data/derived/comb/progs/unify/prog0697.ml.out
Characters 68-69:
  | h::t -> append ( t [h]);;
                     ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
